@@ -34,6 +34,7 @@ import org.castor.cache.CacheAcquireException;
  * 
  * For more details of OSCache, see http://www.opensymphony.com/oscache
  * 
+ * @see <a href="http://www.opensymphony.com/oscache">The OSCache Home page</a>
  * @author <a href="mailto:werner DOT guttmann AT gmx DOT net">Werner Guttmann</a>
  * @author <a href="mailto:ralf DOT joachim AT syscon-world DOT de">Ralf Joachim</a>
  * @version $Revision$ $Date: 2006-04-25 16:09:10 -0600 (Tue, 25 Apr 2006) $
