@@ -67,8 +67,8 @@ import org.exolab.castor.xml.schema.XMLType;
  * A class for unmarshalling restriction elements of a simpleContent
  * @author <a href="mailto:blandin@intalio.com">Arnaud Blandin</a>
  * @version $Revision$ $Date: 2006-04-14 04:14:43 -0600 (Fri, 14 Apr 2006) $
- * @todo supprot the correct restriction for facets and attributes
-**/
+ * TODO: support the correct restriction for facets and attributes
+ **/
 public class SimpleContentRestrictionUnmarshaller extends ComponentReader {
 
 
